--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -26,7 +26,7 @@
 
 						</div>
 					</li>
-					<li><img src="{% static 'core/img/slide2.png'%}" alt="Slide">
+					<li><img src="{% static 'core/img/Slide2.png'%}" alt="Slide">
 						<div class="caption-group">
 							<h2 class="caption title">
 								Samsung <span class="primary">Note9<strong></strong></span>
@@ -43,7 +43,7 @@
                         	</form>
 						</div>
 					</li>
-					<li><img src="{% static 'core/img/slide3.png'%}" alt="Slide">
+					<li><img src="{% static 'core/img/Slide3.png'%}" alt="Slide">
 						<div class="caption-group">
 							<h2 class="caption title">
 								Moto <span class="primary">E5 <strong>play</strong></span>
@@ -60,7 +60,7 @@
                             </form>
 						</div>
 					</li>
-					<li><img src="{% static 'core/img/slide4.png'%}" alt="Slide">
+					<li><img src="{% static 'core/img/Slide4.png'%}" alt="Slide">
 						<div class="caption-group">
 						  <h2 class="caption title">
 								Samsung <span class="primary">Galxy S10+</span>
